<?xml version="1.0"?>
<package>
  <name>camera_driver</name>
  <version>1.0.0</version>
  <description>The camera_driver package</description>

  <maintainer email="lalit.kumar.begani@intel.com">Lalit Begani</maintainer>


  <license>BSD</license>


  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>

  </export>
</package>
